--- a/a/css/style.css
+++ b/a/css/style.css
@@ -155,12 +155,12 @@ body {
 .page-wrapper {
   min-height: 100%;
   position: relative;
-  padding-bottom: 80px;
+  padding-bottom: 174px;
   /* Height of the footer element */ }
 
 .footer {
   width: 100%;
-  height: 80px;
+  height: 174px;
   position: absolute;
   bottom: 0;
   left: 0; }
@@ -234,7 +234,7 @@ body {
       color: red; }
       @media screen and (max-width: 890px) {
         .main-menu li a {
-          background-color: red;
+          background-color: green;
           border-bottom: 1px solid #e60000;
           border-top: 1px solid #ff1a1a;
           color: #ffffff;
