--- a/a/scss/_shame.scss
+++ b/a/scss/_shame.scss
@@ -60,11 +60,11 @@
 			}
 
 			a {
-				color: $primary-color;
+				color: $font-color-1;
 				@media screen and (max-width: 890px) {
-					background-color: $primary-color;
-					border-bottom: 1px solid darken($primary-color, 5%);
-					border-top: 1px solid lighten($primary-color, 5%);
+					background-color: $bg-color-1;
+					border-bottom: 1px solid darken($font-color-1, 5%);
+					border-top: 1px solid lighten($font-color-1, 5%);
 					color: $white;
 					display: block;
 					padding: 0.5em 10px;
@@ -74,7 +74,7 @@
 
 			a:hover,
 			&.current_page_item a {
-				color: $secondary-color;
+				color: $font-color-2;
 				text-decoration: none;
 			}
 		}
