--- a/a/scss/_tools.scss
+++ b/a/scss/_tools.scss
@@ -33,3 +33,14 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+
+@mixin clearfix() {
+	&:before,
+	&:after {
+		content: "";
+		display: table;
+	}
+	&:after {
+		clear: both;
+	}
+}
